--- a/MonoThemeDark/gnome-shell/gnome-shell.css
+++ b/MonoThemeDark/gnome-shell/gnome-shell.css
@@ -699,17 +699,17 @@ stage {
 .datemenu-today-button:focus {
     transition: 200ms;
     color: white;
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0.05);
     box-shadow: none;
 }
 
 .datemenu-today-button:focus:hover {
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0.1);
     box-shadow: none;
 }
 
 .datemenu-today-button:focus:active {
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0.05);
     box-shadow: none;
 }
 
@@ -803,7 +803,7 @@ stage {
 
 .calendar .calendar-month-header .pager-button:focus {
     transition: 200ms;
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0.05);
 }
 
 .calendar .calendar-day-base {
@@ -834,7 +834,7 @@ stage {
 }
 
 .calendar .calendar-day-base:focus {
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0.05);
     color: white;
     box-shadow: none;
     transition: 200ms;
@@ -945,7 +945,7 @@ stage {
 .events-button:focus {
     transition: 200ms;
     color: white;
-    background-color: rgba(255, 255, 255, 0.05);
+    background-color: rgba(255, 255, 255, 0.1);
     box-shadow: none;
 }
 
@@ -1006,7 +1006,7 @@ stage {
 .world-clocks-button:focus {
     transition: 200ms;
     color: white;
-    background-color: rgba(255, 255, 255, 0.05);
+    background-color: rgba(255, 255, 255, 0.1);
     box-shadow: none;
 }
 
@@ -1081,7 +1081,7 @@ stage {
 .weather-button:focus {
     transition: 200ms;
     color: white;
-    background-color: rgba(255, 255, 255, 0.05);
+    background-color: rgba(255, 255, 255, 0.1);
     box-shadow: none;
 }
 
@@ -2154,7 +2154,7 @@ StScrollBar StButton#hhandle:active {
 .notification-banner .notification-button:focus {
     transition: 200ms;
     color: white;
-    background-color: rgba(255, 255, 255, 0.05);
+    background-color: rgba(255, 255, 255, 0.1);
     box-shadow: none;
 }
 
